examples/conf/Gateway_edge_tls-terminate-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-terminate-gateway
  namespace: edge
  annotations:
    # Custom annotation: indicates this TLS listener needs to terminate to TCP backend
    edgion.io/backend-protocol: tcp
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: tls-terminate-tcp
      protocol: TLS
      port: 19001
      tls:
        mode: Terminate
        certificateRefs:
          - name: edge-tls
